
  * Add support for appending season and episode numbers to filenames
    during recording.

  * Prior to this release the color (i.e. connection status) of the
    CWC entries were not correctly updated when a connection was established
    or lost. This is now fixed. Ticket #144

  * Add support for prioritized recordings. The user can chose among five
    different priorities.

hts-tvheadend (2.10) hts; urgency=high

  * Fix a crash in HTSP server.

 -- Andreas Öman <andreas@lonelycoder.com>  Thu, 04 Feb 2010 22:21:22 +0100

hts-tvheadend (2.9) hts; urgency=high

  * A last minute bug slipped in the 2.8 release, causing Tvheadend to read
    settings and configuration from incorrect path when also switching user
    during startup. This has now been fixed.

 -- Andreas Öman <andreas@lonelycoder.com>  Mon, 25 Jan 2010 21:23:47 +0100

hts-tvheadend (2.8) hts; urgency=low

  * Added support for AAC audio

  * Added support for manual creation of DVR entries. Prior to this it
    was only possible to schedule a recording based on EPG entries.

  * It's now possible to enable/disable the signal quality monitor per
    adapter. This is now default off as it seem to mostly cause problems
    for people and it's only useful if you have complex setups with
    multiple adapters, etc.

  * Improve logging when subscriptions fail to start

  * More intelligent arbitration amongst all sources when a subscription
    is about to start for a channel. If we cannot descramble or if no
    input is detected, skip to next source.
    Fixes ticket #89

  * Add option for editing channel icon URL in the channel config tab.

  * Fix support for Irdeto ECM

  * Automatically detect if a connected USB DVB adapter is only Full speed
    (ie 12Mbit/s), and if so, limit so Tvheadend only can stream one service
    at the time from the tuned frequency.

  * Add support for extracting provider in the PMT for SECA/Mediaguard

  * Add support for NIT-other tables.