@@ -87,5 +87,5 @@ int streaming_pad_probe_type(streaming_pad_t *sp,
 			     streaming_message_type_t smt);
 
 const char *streaming_code2txt(int code);
-     
+
 #endif /* STREAMING_H_ */
